Updated api and user interface

--- a/doc/api.org
+++ b/doc/api.org
@@ -1,88 +1,86 @@
-#+TITLE: API Documentation
 #+OPTIONS: toc:nil
 #+STARTUP: indent
-
 #+BEGIN_COMMENT
 REST API Documentation Mechanism from : https://gist.github.com/iros/3426278
 More details available at: https://bocoup.com/blog/documenting-your-api
 Adapted to org format.
 #+END_COMMENT
 
-* COMMENT Title
+* API Documentation
+** COMMENT Title
 <Additional information about your API call. Try to use verbs that match both request type (fetching vs modifying) and plurality (one vs multiple).>
-** URL
+*** URL
 <The URL Structure (path only, no root url)>
-** Method
+*** Method
 <The request type>
 ~GET~ | ~POST~ | ~DELETE~ | ~PUT~
-** URL Params
+*** URL Params
 <If URL params exist, specify them in accordance with name mentioned in URL section. Separate into optional and required. Document data constraints.>
-*** Required
+**** Required
 ~id=[integer]~
-*** Optional
+**** Optional
 ~photo_id=[alphanumeric]~
-*** Example
+**** Example
 #+BEGIN_EXAMPLE
 /login
 #+END_EXAMPLE
-** Data Params
-*** Required
-**** email
-**** password
-*** Optional (nullable)
+*** Data Params
+**** Required
+***** email
+***** password
+**** Optional (nullable)
 None
-*** Form
+**** Form
 #+BEGIN_EXAMPLE
 {
   "email" : <String>,
   "password" : <Number>
 }
 #+END_EXAMPLE
-*** Example
+**** Example
 #+BEGIN_SRC JSON
 {
   "email" : "example@hufs.ac.kr",
   "password" : "mY!_pa$sw0RDD"
 }
 #+END_SRC
-** Success Response
-*** Code 200 OK
-**** Form
+*** Success Response
+**** Code 200 OK
+***** Form
 #+BEGIN_EXAMPLE
 {
   "id" : <Number>
 }
 #+END_EXAMPLE
-**** Example
+***** Example
 #+BEGIN_SRC JSON
 {
   "id" : 12
 }
 #+END_SRC
-** Error Response
+*** Error Response
 <Most endpoints will have many ways they can fail. From unauthorized access, to wrongful parameters etc. All of those should be liste d here. It might seem repetitive, but it helps prevent assumptions from being made where they should be.>
-*** Code 401 Unauthorized
-**** Form
+**** Code 401 Unauthorized
+***** Form
 #+BEGIN_EXAMPLE
 {
   "error" : <String>
 }
 #+END_EXAMPLE
-**** Example
+***** Example
 #+BEGIN_SRC JSON
 {
   "error" : "Wrong credentials"
 }
 #+END_SRC
-** Sample Call
+*** Sample Call
 <Just a sample call to your endpoint in a runnable format ($.ajax call or a curl request) - this makes life easier and more predictable.>
 #+BEGIN_EXAMPLE
 
 #+END_EXAMPLE
-** Notes
+*** Notes
 <This is where all uncertainties, commentary, discussion etc. can go. I recommend timestamping and identifying oneself when leaving comments here.>
 
-* API Lists
 ** User Login
 Signs in the user, returning a cookie and the result as JSON.
 *** URL
@@ -152,77 +150,450 @@ None
 #+END_EXAMPLE
 *** Notes
 
-
-* API Lists2
-*** User Login
-CLOSED: [2017-03-25 토 17:17]
-Signs in the user, returning a cookie and the result as JSON.
-**** URL
-~/login~
-**** Method
-~POST~
-**** URL Params
-***** Required
-~None~
-***** Optional
-~None~
-***** Example
+** User Signup
+<Additional information about your API call. Try to use verbs that match both request type (fetching vs modifying) and plurality (one vs multiple).>
+*** URL
+<The URL Structure (path only, no root url)>
+*** Method
+<The request type>
+~GET~ | ~POST~ | ~DELETE~ | ~PUT~
+*** URL Params
+<If URL params exist, specify them in accordance with name mentioned in URL section. Separate into optional and required. Document data constraints.>
+**** Required
+~id=[integer]~
+**** Optional
+~photo_id=[alphanumeric]~
+**** Example
 #+BEGIN_EXAMPLE
 /login
 #+END_EXAMPLE
-**** Data Params
-***** Required
-****** email
-****** password
-***** Optional (nullable)
+*** Data Params
+**** Required
+***** email
+***** password
+**** Optional (nullable)
 None
-***** Form
+**** Form
 #+BEGIN_EXAMPLE
 {
   "email" : <String>,
   "password" : <Number>
 }
 #+END_EXAMPLE
-***** Example
+**** Example
 #+BEGIN_SRC JSON
 {
   "email" : "example@hufs.ac.kr",
   "password" : "mY!_pa$sw0RDD"
 }
 #+END_SRC
-**** Success Response
-***** Code 200 OK
-****** Form
+*** Success Response
+**** Code 200 OK
+***** Form
 #+BEGIN_EXAMPLE
 {
   "id" : <Number>
 }
 #+END_EXAMPLE
-****** Example
+***** Example
 #+BEGIN_SRC JSON
 {
   "id" : 12
 }
 #+END_SRC
-**** Error Response
-***** Code 401 Unauthorized
-****** Form
+*** Error Response
+<Most endpoints will have many ways they can fail. From unauthorized access, to wrongful parameters etc. All of those should be liste d here. It might seem repetitive, but it helps prevent assumptions from being made where they should be.>
+**** Code 401 Unauthorized
+***** Form
 #+BEGIN_EXAMPLE
 {
   "error" : <String>
 }
 #+END_EXAMPLE
-****** Example
+***** Example
 #+BEGIN_SRC JSON
 {
   "error" : "Wrong credentials"
 }
 #+END_SRC
-**** Sample Call
+*** Sample Call
+<Just a sample call to your endpoint in a runnable format ($.ajax call or a curl request) - this makes life easier and more predictable.>
 #+BEGIN_EXAMPLE
 
 #+END_EXAMPLE
-**** Notes
+*** Notes
+<This is where all uncertainties, commentary, discussion etc. can go. I recommend timestamping and identifying oneself when leaving comments here.>
+
+
+** Course View
+과목의 정보 가져오기
+*** URL
+/course
+*** Method
+~GET~
+*** URL Params
+**** Required
+- ~year_semester=<yyyy-semester>~
+  - 조회할 년도와 학기를 입력
+  - 년도: 네자리 숫자
+  - 학기: ~01~, ~summer~, ~02~, ~winter~ 중 한가지
+**** Optional
+- ~major=major_name~
+  - 강의가 개설된 전공/교양영역 코드[fn:2]
+  - 코드는 하단의 코드표 참고
+- ~area=area_name~
+  - 수강영역을 표시
+  - 아래의 값 중에서 복수선택 가능
+    - 1mj (1전공)
+    - 2mj (이중전공)
+    - min (부전공)
+    - tea (교직)
+    - lib (교양)
+  - 미선택시 모든 과목을 돌려줌
+  - 선택한 영역을 만족하는 과목을 모두 돌려줌
+    - 예: 2mj 요청에 이중전공이 수강할 수 있는 모든 1전공 과목도 포함됨
+- ~details=detail~
+  - 받아올 정보를 지정
+  - 형식: 아래의 값 중 선택(복수 가능)
+    - year (권장학년)
+    - coursenum_verbatim (학수번호 - 강의계획서에 써있는 그대로)
+    - coursenum (학수번호 - 이 앱의 형식)[fn:3]
+    - coursename (과목이름)
+    - required (전필여부)
+    - online (온라인강의 여부)
+    - fl (원어강의여부)
+    - tt (팀티칭여부)
+    - prof (교수님이름 메인)
+    - prof_sub (교수님이름 서브)
+    - cred (학점수)
+    - totaltime (주당 수업시간수)
+    - timeroom[fn:1] (실제 수업시간 및 강의실)
+    - maxstudent
+    - note (강의계획서에 있는 비고)
+  - 미지정일 때에는 모든 정보를 받아옴(비추천)
+- 필터
+  - 필터는 다음 방법으로 요청
+  - 예시
+    - year=<number>
+    - coursenum=<coursenum>
+    - required=<boolean>
+    - online=<boolean>
+    - fl=<boolean>
+    - tt=<boolean>
+    - prof=<string>
+    - cred=<number>
+    - totaltime=<number>
+    - maxstudentmin=<number>
+    - maxstudentmax=<number>
+**** Example
+#+BEGIN_EXAMPLE
+/login?year-semester=2017-01&major=IEL&area=2mj&details=coursename&details=fl
+#+END_EXAMPLE
+*** Data Params
+**** Required
+***** email
+***** password
+**** Optional (nullable)
+None
+**** Form
+#+BEGIN_EXAMPLE
+{
+  "email" : <String>,
+  "password" : <Number>
+}
+#+END_EXAMPLE
+**** Example
+#+BEGIN_SRC JSON
+{
+  "email" : "example@hufs.ac.kr",
+  "password" : "mY!_pa$sw0RDD"
+}
+#+END_SRC
+*** Success Response
+**** Code 200 OK
+***** Form
+#+BEGIN_EXAMPLE
+{
+  "id" : <Number>
+}
+#+END_EXAMPLE
+***** Example
+#+BEGIN_SRC JSON
+{
+  "id" : 12
+}
+#+END_SRC
+*** Error Response
+**** Code 401 Unauthorized
+***** Form
+#+BEGIN_EXAMPLE
+{
+  "error" : <String>
+}
+#+END_EXAMPLE
+***** Example
+#+BEGIN_SRC JSON
+{
+  "error" : "Wrong credentials"
+}
+#+END_SRC
+**** Code 403 Forbidden
+- 요청한 데이터가 너무 클때
+***** Form
+#+BEGIN_EXAMPLE
+{
+  "error" : <String>
+}
+#+END_EXAMPLE
+***** Example
+#+BEGIN_SRC JSON
+{
+  "error" : "Response data too large"
+}
+#+END_SRC
+**** Code 501 Not Implemented
+- 요청한 URL 쿼리가 서버에 아직 미구현일 때
+- Response Body에는 구현되지 않은
+***** Form
+#+BEGIN_EXAMPLE
+{
+  "error" : <Array>
+}
+#+END_EXAMPLE
+***** Example
+#+BEGIN_SRC JSON
+{
+  "error" : [
+    { "filter" : "maxstudentnum" },
+    { "filter" : "minstudentnum" }
+  ]
+}
+#+END_SRC
+*** Sample Call
+<Just a sample call to your endpoint in a runnable format ($.ajax call or a curl request) - this makes life easier and more predictable.>
+#+BEGIN_EXAMPLE
+
+#+END_EXAMPLE
+*** Notes
+<This is where all uncertainties, commentary, discussion etc. can go. I recommend timestamping and identifying oneself when leaving comments here.>
+** 성적 입력
+사용자의 성적을 입력
+*** URL
+/grades
+*** Method
+~POST~
+*** URL Params
+**** Required
+~None~
+**** Optional
+~None~
+**** Example
+#+BEGIN_EXAMPLE
+/grades
+#+END_EXAMPLE
+*** Data Params
+**** Required
+***** data
+학수번호, 과목의 쌍으로 이루어진 배열
+**** Optional (nullable)
+~None~
+**** Form
+#+BEGIN_EXAMPLE
+{
+  "data" : [
+    [<Course Number>, <Grade>],
+    [<Course Number>, <Grade>],
+    [<Course Number>, <Grade>],
+    [<Course Number>, <Grade>],
+    [<Course Number>, <Grade>]
+  ]
+}
+#+END_EXAMPLE
+**** Example
+#+BEGIN_SRC JSON
+{
+  "data" : [
+    ["IEL-D01101", "B"],
+    ["SCM-T07403", "A+"],
+    ["JNI-C04524", "A+"],
+    ["LNL-U76225", "F"]
+  ]
+}
+#+END_SRC
+*** Success Response
+**** Code 200 OK
+세부 Response 디테일은 미정
+***** Form
+***** Example
+*** Error Response
+**** Code 401 Unauthorized
+***** Form
+#+BEGIN_EXAMPLE
+{
+  "error" : <String>
+}
+#+END_EXAMPLE
+***** Example
+#+BEGIN_SRC JSON
+{
+  "error" : "Wrong credentials"
+}
+#+END_SRC
+*** Sample Call
+<Just a sample call to your endpoint in a runnable format ($.ajax call or a curl request) - this makes life easier and more predictable.>
+#+BEGIN_EXAMPLE
+
+#+END_EXAMPLE
+*** Notes
+<This is where all uncertainties, commentary, discussion etc. can go. I recommend timestamping and identifying oneself when leaving comments here.>
+
+** 성적 받아오기
+<Additional information about your API call. Try to use verbs that match both request type (fetching vs modifying) and plurality (one vs multiple).>
+*** URL
+<The URL Structure (path only, no root url)>
+*** Method
+<The request type>
+~GET~ | ~POST~ | ~DELETE~ | ~PUT~
+*** URL Params
+<If URL params exist, specify them in accordance with name mentioned in URL section. Separate into optional and required. Document data constraints.>
+**** Required
+~id=[integer]~
+**** Optional
+~photo_id=[alphanumeric]~
+**** Example
+#+BEGIN_EXAMPLE
+/login
+#+END_EXAMPLE
+*** Data Params
+**** Required
+***** email
+***** password
+**** Optional (nullable)
+None
+**** Form
+#+BEGIN_EXAMPLE
+{
+  "email" : <String>,
+  "password" : <Number>
+}
+#+END_EXAMPLE
+**** Example
+#+BEGIN_SRC JSON
+{
+  "email" : "example@hufs.ac.kr",
+  "password" : "mY!_pa$sw0RDD"
+}
+#+END_SRC
+*** Success Response
+**** Code 200 OK
+***** Form
+#+BEGIN_EXAMPLE
+{
+  "id" : <Number>
+}
+#+END_EXAMPLE
+***** Example
+#+BEGIN_SRC JSON
+{
+  "id" : 12
+}
+#+END_SRC
+*** Error Response
+<Most endpoints will have many ways they can fail. From unauthorized access, to wrongful parameters etc. All of those should be liste d here. It might seem repetitive, but it helps prevent assumptions from being made where they should be.>
+**** Code 401 Unauthorized
+***** Form
+#+BEGIN_EXAMPLE
+{
+  "error" : <String>
+}
+#+END_EXAMPLE
+***** Example
+#+BEGIN_SRC JSON
+{
+  "error" : "Wrong credentials"
+}
+#+END_SRC
+*** Sample Call
+<Just a sample call to your endpoint in a runnable format ($.ajax call or a curl request) - this makes life easier and more predictable.>
+#+BEGIN_EXAMPLE
+
+#+END_EXAMPLE
+*** Notes
+<This is where all uncertainties, commentary, discussion etc. can go. I recommend timestamping and identifying oneself when leaving comments here.>
+
+** Planning
+<Additional information about your API call. Try to use verbs that match both request type (fetching vs modifying) and plurality (one vs multiple).>
+*** URL
+<The URL Structure (path only, no root url)>
+*** Method
+<The request type>
+~GET~ | ~POST~ | ~DELETE~ | ~PUT~
+*** URL Params
+<If URL params exist, specify them in accordance with name mentioned in URL section. Separate into optional and required. Document data constraints.>
+**** Required
+~id=[integer]~
+**** Optional
+~photo_id=[alphanumeric]~
+**** Example
+#+BEGIN_EXAMPLE
+/login
+#+END_EXAMPLE
+*** Data Params
+**** Required
+***** email
+***** password
+**** Optional (nullable)
+None
+**** Form
+#+BEGIN_EXAMPLE
+{
+  "email" : <String>,
+  "password" : <Number>
+}
+#+END_EXAMPLE
+**** Example
+#+BEGIN_SRC JSON
+{
+  "email" : "example@hufs.ac.kr",
+  "password" : "mY!_pa$sw0RDD"
+}
+#+END_SRC
+*** Success Response
+**** Code 200 OK
+***** Form
+#+BEGIN_EXAMPLE
+{
+  "id" : <Number>
+}
+#+END_EXAMPLE
+***** Example
+#+BEGIN_SRC JSON
+{
+  "id" : 12
+}
+#+END_SRC
+*** Error Response
+<Most endpoints will have many ways they can fail. From unauthorized access, to wrongful parameters etc. All of those should be liste d here. It might seem repetitive, but it helps prevent assumptions from being made where they should be.>
+**** Code 401 Unauthorized
+***** Form
+#+BEGIN_EXAMPLE
+{
+  "error" : <String>
+}
+#+END_EXAMPLE
+***** Example
+#+BEGIN_SRC JSON
+{
+  "error" : "Wrong credentials"
+}
+#+END_SRC
+*** Sample Call
+<Just a sample call to your endpoint in a runnable format ($.ajax call or a curl request) - this makes life easier and more predictable.>
+#+BEGIN_EXAMPLE
+
+#+END_EXAMPLE
+*** Notes
+<This is where all uncertainties, commentary, discussion etc. can go. I recommend timestamping and identifying oneself when leaving comments here.>
 
 
 * Login Page
@@ -397,3 +768,11 @@ http://hufs-planner.com/search_course
   - 1전공
   - 이중전공
   - ...
+
+* Footnotes
+
+[fn:1] 수업시간을 표시하는 형식
+
+[fn:2] 강의가 개설된 전공/교양영역 코드
+
+[fn:3] 학수번호 형식
