--- a/doc/user-interface.org
+++ b/doc/user-interface.org
@@ -1,19 +1,19 @@
-#+TITLE: 유저 인터페이스 구성
 #+OPTIONS: toc:nil
 #+STARTUP: indent
 
-* Login Page
-** 입력
+* 유저 인터페이스 구성
+** Login Page
+*** 입력
 - 이메일(@hufs.ac.kr)
 - 비밀번호
 - 로그인 버튼
-** 출력
+*** 출력
 - 로그인 버튼 누르면페이지(회원 기본 정보)로 이동
   - 로그인 성공: 작업하고 있던 페이지(회원 기본 정보)로 이동
   - 로그인 실패: 실패 메시지를 띄움
 
-* 회원가입 페이지
-** 입력
+** 회원가입 페이지
+*** 입력
 - 입력 폼
   - 이메일
   - 비밀번호
@@ -30,7 +30,7 @@
   - 개인정보이용동의
 - 버튼
   - 회원가입 버튼
-** 출력
+*** 출력
 - 이메일을 입력하면
   - 이메일이 기준에 맞는지 표시
   - 중복은 없는지 표시
@@ -44,9 +44,9 @@
     - 입력 안한지 1초 넘어가면 서버에 요청
 - 회원가입 버튼 누르면
   - 회원가입 요청 결과를 보여줌
-* 회원 기본정보
-** 출력
-*** 데스크톱
+** 회원 기본정보
+*** 출력
+**** 데스크톱
 - 큰 카테고리 4개
   - 1전공
     - 드롭다운: 학기마다 1개씩
@@ -77,23 +77,23 @@
     - 학기구분 없이 영역 내의 모든 과목을 띄움
     - 드롭다운 내에는 영역구분 없음
 - 제출버튼
-*** 모바일(데스크톱과 다른 부분)
+**** 모바일(데스크톱과 다른 부분)
 - 가로로 되어있는 카테고리를 세로로 정렬
-** 입력
+*** 입력
 - 각각의 카테고리에서 알맞은 정보 체크
 - 체크하면 점수 입력 드롭다운이 생김(A+ ~ F)
 - 제출
-* 도표 요약
-** 현재정보(기본정보만 있을 때)
-*** 출력
-**** 점수정보 (토글버튼으로 한번에 둘중에 하나만 표시)
-***** 학기별
+** 도표 요약
+*** 현재정보(기본정보만 있을 때)
+**** 출력
+***** 점수정보 (토글버튼으로 한번에 둘중에 하나만 표시)
+****** 학기별
 | 학기        | 점수 |
 | 1학년 1학기 |  3.5 |
 | 1학년 2학기 |  4.0 |
 |-------------+------|
 | 계          | 3.75 |
-***** 전공구분별
+****** 전공구분별
 | 구분     | 점수 |
 | 1전공    |      |
 | 이중전공 |      |
@@ -102,7 +102,7 @@
 | 자선     |      |
 |----------+------|
 | 계       |      |
-**** 요약정보
+***** 요약정보
 - 처음에 표시할 때는 3열
   - 기수강을 탭/클릭하면 B이상과 C+이하로 분류
   - 미수강을 탭/클릭하면 순수 미수강과 F로 분류
@@ -117,35 +117,35 @@
 |-------+--------+---------+--------+---|
 | 총    | 70/130 |         |        |   |
 
-**** 세부표
-***** 1행
+***** 세부표
+****** 1행
 - 모양
 | 1전공 | 이중전공 | 교양 | 자선 | 교직 |
-***** 2행부터
+****** 2행부터
 - 각 분류별 모양
 (과목명이 전체의 2/3 길이 차지)
 | 과목명 | 학점수 | 점수 |
-*** 입력
-**** 요약정보
+**** 입력
+***** 요약정보
 - 기수강/미수강 탭할때 표시되는 열 전환
-** 다음학기 정보
-*** 출력
-**** 점수정보
+*** 다음학기 정보
+**** 출력
+***** 점수정보
 - 바뀐 점수를 빨강/초록으로 구분해서 표시
-**** 요약정보
+***** 요약정보
 - 바뀐 정보를 표시
   - 오른쪽에 화살표로 증감을 표시
   - 셀 안의 글자색깔로 좋고 나쁨을 표시
-**** 세부표
+***** 세부표
 - 각 분류별로 과목을 기존 과목과 동일하게 표시하되 배경색 추가(초록색?)
-* 목표과목과 학점
+** 목표과목과 학점
 기본정보와 동일하게 보여주되 시간표와 실시간 요약정보 업데이트해서 표시
-** 출력
-*** 상단고정
+*** 출력
+**** 상단고정
 - 시간표
   - 매우 작게, 신청한 시간대만 색깔로 표시
-*** 페이지
-**** 정보입력
+**** 페이지
+***** 정보입력
 - 회원 기본정보와 같음
   - 1전공, 이중전공
     - 드롭다운 1: 다음학기 추천 강의
@@ -160,48 +160,48 @@
         - 등등
   - 교양
     - 드롭다운: 앞에꺼랑 똑같이
-**** 학점계산
+***** 학점계산
 앞에꺼랑 똑같이
-**** 신청과목 요약
+***** 신청과목 요약
 드롭다운 밑에 있는 표 칸을 그대로 보여주기
-** 입력
+*** 입력
 - 기본정보 입력 페이지와 동일
   - 탭해서 과목선택
 - 신청과목 요약 틀
   - 탭해서 과목 제거
 
-* 총 요약 페이지
-** 출력
-*** 상단 (현재상황 요약)
-**** 표시
+** 총 요약 페이지
+*** 출력
+**** 상단 (현재상황 요약)
+***** 표시
 - 총 취득 학점 / 졸업필요 학점
 - 총 평점 / 4.5
-**** 강렬한 디자인
-*** 중단
-**** 학기
+***** 강렬한 디자인
+**** 중단
+***** 학기
 - 다음학기 (내용 이미 기입되어 있음, 변경불가)
 - 그 후 학기 (최초 1개만 표시) (내용 사용자가 기입)
   - 학기추가 버튼으로 추가입력 가능
-**** 학기별 내용
+***** 학기별 내용
 - 들을 학점
 - 예상 평점
-*** 하단 (목표달성후 상황 요약)
-**** 표시
+**** 하단 (목표달성후 상황 요약)
+***** 표시
 - 총 취득 학점 / 졸업필요 학점
 - 총 평점 / 4.5
-**** 강렬한 디자인(상단과 동일한 디자인)
-** 입력
+***** 강렬한 디자인(상단과 동일한 디자인)
+*** 입력
 - 그 후 학기의 들을 학점, 예상 평점
 - 학기추가 버튼
 - 저장 버튼
-* 앱 전반
-** 색깔
+** 앱 전반
+*** 색깔
 - 수업의 영역별 칼라코딩하기
   - 1전공
   - 이중전공
   - ...
 
-* 1차 기술발표
+** 1차 기술발표
 - 핵심기술 세미나 주제
 - 예2) 안드로이드 앱 개발
   - 기본적으로 안드로이드 앱이 어떻게 동작하는지
