Updated api for good views, updated presentation

--- a/doc/api.org
+++ b/doc/api.org
@@ -150,15 +150,15 @@ None
 #+END_EXAMPLE
 *** Notes
 
-** User Signup
-<Additional information about your API call. Try to use verbs that match both request type (fetching vs modifying) and plurality (one vs multiple).>
+** COMMENT User Signup
+# <Additional information about your API call. Try to use verbs that match both request type (fetching vs modifying) and plurality (one vs multiple).>
 *** URL
-<The URL Structure (path only, no root url)>
+# <The URL Structure (path only, no root url)>
 *** Method
-<The request type>
+# <The request type>
 ~GET~ | ~POST~ | ~DELETE~ | ~PUT~
 *** URL Params
-<If URL params exist, specify them in accordance with name mentioned in URL section. Separate into optional and required. Document data constraints.>
+# <If URL params exist, specify them in accordance with name mentioned in URL section. Separate into optional and required. Document data constraints.>
 **** Required
 ~id=[integer]~
 **** Optional
@@ -202,7 +202,7 @@ None
 }
 #+END_SRC
 *** Error Response
-<Most endpoints will have many ways they can fail. From unauthorized access, to wrongful parameters etc. All of those should be liste d here. It might seem repetitive, but it helps prevent assumptions from being made where they should be.>
+# <Most endpoints will have many ways they can fail. From unauthorized access, to wrongful parameters etc. All of those should be liste d here. It might seem repetitive, but it helps prevent assumptions from being made where they should be.>
 **** Code 401 Unauthorized
 ***** Form
 #+BEGIN_EXAMPLE
@@ -217,12 +217,12 @@ None
 }
 #+END_SRC
 *** Sample Call
-<Just a sample call to your endpoint in a runnable format ($.ajax call or a curl request) - this makes life easier and more predictable.>
+# <Just a sample call to your endpoint in a runnable format ($.ajax call or a curl request) - this makes life easier and more predictable.>
 #+BEGIN_EXAMPLE
 
 #+END_EXAMPLE
 *** Notes
-<This is where all uncertainties, commentary, discussion etc. can go. I recommend timestamping and identifying oneself when leaving comments here.>
+# <This is where all uncertainties, commentary, discussion etc. can go. I recommend timestamping and identifying oneself when leaving comments here.>
 
 
 ** Course View
