--- a/doc/roadmap.org
+++ b/doc/roadmap.org
@@ -1,47 +1,138 @@
-#+TITLE: 앞으로 할거 계획
+#+TITLE: 개발계획
+#+STARTUP: indent
+#+OPTIONS: toc:nil
 
-* 해야할 것
-** 
-** 페이지
-*** TODO 회원기본정보 입력
-긁어서 붙이는 페이지
-**** 학번(처음 과목 들은 시점) -> 따로 받을 필요 없음
-**** 1전공 -> 받을 필요 없음
-**** 2중전공 -> 받을 필요 없음
-**** 교직여부 -> 받아야함
-**** 재수강 과목수 -> 받을 필요 없음
-*** TODO 도표요약
+* 백엔드 개발계획
+- 목표: 6/5일까지 완성
+** TODO 백엔드 구현이 필요한 것 [0/7]
+*** TODO [#C] Understanding of the Framework [0/1]
+**** TODO Setting up the testing environment [0/3]
+***** TODO Controller Testing Environment
+***** TODO Model Testing Environment
+***** TODO Views Testing Environment
+*** TODO [#B] Controller [0/2]
+**** TODO Implementation [0/11]
+***** TODO ActivateAccountController
+***** TODO ApplicationController
+***** TODO ChangePasswordController
+***** TODO ForgotPasswordController
+***** TODO GoalController
+***** TODO InputController
+****** TODO 입력한 정보를 인식
+***** TODO ResetPasswordController
+***** TODO SignInController
+***** TODO SignUpController
+***** TODO SocialAuthController
+***** TODO SummaryController
+**** TODO Test [0/11]
+***** TODO ActivateAccountController
+***** TODO ApplicationController
+***** TODO ChangePasswordController
+***** TODO ForgotPasswordController
+***** TODO GoalController
+***** TODO InputController
+***** TODO ResetPasswordController
+***** TODO SignInController
+***** TODO SignUpController
+***** TODO SocialAuthController
+***** TODO SummaryController
+*** TODO [#A] Models [0/1]
+**** TODO Implementation [8/9]
+***** DONE AuthToken
+CLOSED: [2017-05-16 화 17:45]
+***** TODO Course
+***** DONE CourseTime
+CLOSED: [2017-05-16 화 17:45]
+***** DONE Department
+CLOSED: [2017-05-16 화 17:45]
+***** DONE DepartmentTime
+CLOSED: [2017-05-16 화 17:45]
+***** DONE Major
+CLOSED: [2017-05-16 화 17:45]
+***** DONE MajorType
+CLOSED: [2017-05-16 화 17:45]
+***** DONE Subject
+CLOSED: [2017-05-16 화 17:45]
+***** DONE User
+CLOSED: [2017-05-16 화 17:45]
+*** TODO [#A] DAOs [0/2]
+**** TODO Trait and Basic Implementation [0/13]
+***** TODO AuthTokenDAO
+***** TODO CourseDAO
+***** TODO CourseTimeDAO
+***** TODO DepartmentDAO
+***** TODO DepartmentTimeDAO
+***** TODO MajorDAO
+***** TODO MajorHasSubjectDAO
+***** TODO MajorTypeDAO
+***** TODO SubjectDAO
+***** TODO UserDAO
+***** TODO UserHasMajorDAO
+***** TODO UserHasCourseDAO
+***** TODO UserHasCourseFutureDAO
+**** TODO Test [0/13]
+***** TODO AuthTokenDAO
+***** TODO CourseDAO
+***** TODO CourseTimeDAO
+***** TODO DepartmentDAO
+***** TODO DepartmentTimeDAO
+***** TODO MajorDAO
+***** TODO MajorHasSubjectDAO
+***** TODO MajorTypeDAO
+***** TODO SubjectDAO
+***** TODO UserDAO
+***** TODO UserHasMajorDAO
+***** TODO UserHasCourseDAO
+***** TODO UserHasCourseFutureDAO
+*** TODO [#B] Views and Forms [0/2]
+- 보류
+**** TODO Implementation [/]
+**** TODO Test [/]
+*** TODO [#A] Database [0/1]
+**** TODO DDL Script [1/1]
+***** DONE Pass all foreign key typechecks
+CLOSED: [2017-05-16 화 17:45]
+**** TODO Data [0/3]
+***** TODO Course Data (as SQL)
+****** TODO Course
 - 
-*** TODO 목표 과목과 학점
-
-*** TODO 총 요약 페이지
-*** TODO 로그인/회원가입
-*** TODO 
-
-* 남은 시간
-** 9주차(4/24)
-*** 주간보고서
-*** 도표요약 페이지 완성
-*** 목표과목과 학점 페이지 착수
-** 10주차(5/1)
-*** 중간발표 2
-
-** 11주차(5/8)
-*** 주간보고서
-
-** 12주차(5/15)
-
-** 13주차(5/22)
-*** 중간발표 3
-*** 주간보고서
-
-** 14주차(5/29)
-- 웬만큼 다 끝나야...
-
-** 15주차(6/5)
-*** 주간보고서
-- 기말전주
-
-** 16주차(6/12)
-*** 최종발표
-- 발표말고는 아무것도 할 시간이 없음 기말
+****** TODO Major
+****** TODO Subjects
+***** TODO Major Data
+***** TODO Subject Data
+** 백엔드 시간계획
+*** 12주차(5/15)
+- Development
+**** 5/15
+- 보고서 제출
+**** 5/16
+- 
+**** 5/17
+**** 5/18
+**** 5/19
+**** 5/20
+**** 5/21
+- 발표제작
+*** 13주차(5/22)
+- 
+**** 5/22
+- 중간발표 3
+**** 5/23
+**** 5/24
+**** 5/25
+**** 5/26
+**** 5/27
+**** 5/28
+*** 14주차(5/29)
+- Primarily Testing
+**** 5/29
+- 보고서 제출
+**** 5/30
+**** 5/31
+**** 6/1
+**** 6/2
+**** 6/3
+**** 6/4
+*** 15주차(6/5)
+**** 6/5
+- 최종발표
