--- a/README.org
+++ b/README.org
@@ -2,6 +2,4 @@
 #+OPTIONS: toc:nil
 #+STARTUP: indent
 
-Onedrive 링크: https://1drv.ms/f/s!AmKFhFhb4Knr81jbJS0ExRKA8_W5
-
-
+Documentation coming soon...
